created entire workflow for get and post + created tests
